--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dancing ROBO</title>
     <link rel="stylesheet" href="./style.css">
    <center> <h1>Playing Robo</h1></center>
+    <link rel="shortcut icon" href="./fb.png" type="image/x-icon">
    <hr>
 </head>
 <body>
